atualizando os arquivos para compartilhar

--- a/testes.html
+++ b/testes.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <span id="mesAtual">Testando o conteúdo hard coded</span>
-    
-    <!-- <script type="module" src="datas/mesAtual.js"></script> -->
+    <canvas id="myChart" width="400" height="400"></canvas>
+    <script type="module" src="/teste.mjs"></script>
+
 </body>
 </html>
